# ckanext-aup

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/aup/: action.py  auth.py  config_declaration.yaml  helpers.py  interface.py  logic.py  plugin.py  schema.py  views.py
ckanext/aup/assets/: aup.css  script.js  webassets.yml
ckanext/aup/templates/: base.html  page.html
ckanext/aup/templates/admin/: index.html
ckanext/aup/templates/ckanext_aup/: aup.html  aup_accordion.html  aup_breadcrumb.html  aup_form.html  aup_home_content.html  aup_lorem_ipsum.html  aup_rejected.html  aup_view.html
ckanext/aup/templates/home/: index.html
ckanext/aup/templates/snippets/: acceptable_use.html  acceptable_use_rejected.html
ckanext/aup/templates/user/: read_base.html
ckanext/aup/templates/user/snippets/: info.html
ckanext/aup/tests/: test_auth.py  test_helpers.py  test_interface.py  test_logic.py  test_plugin.py  test_views.py
