[metadata]
name = ckanext-aup
version = 0.1.0
description = Require users to agree to an Appropriate Usage Policy (AUP) to use CKAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioplatformsAustralia/ckanext-aup
author = Bioplatforms Australia
author_email = help@bioplatforms.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN AUP

[options]
packages = find:
namespace_packages = ckanext
install_requires =
                 ckanext-toolbelt
include_package_data = True

[options.entry_points]
ckan.plugins =
             aup = ckanext.aup.plugin:AupPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/aup/i18n/ckanext-aup.pot
width = 80

[init_catalog]
domain = ckanext-aup
input_file = ckanext/aup/i18n/ckanext-aup.pot
output_dir = ckanext/aup/i18n

[update_catalog]
domain = ckanext-aup
input_file = ckanext/aup/i18n/ckanext-aup.pot
output_dir = ckanext/aup/i18n
previous = true

[compile_catalog]
domain = ckanext-aup
directory = ckanext/aup/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
